created Page2Activity. This automatically created activity_2.xml and Content_page2.xml. It added a new activity to the manifest for id-ing. I moved the spinner to page two. added appropriate methods to MainActivity to make the buttons work.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
         <item>Hong Kong Dollar</item>
         <item>Yuan</item>
     </string-array>
+    <string name="title_activity_page2">Page2Activity</string>
 </resources>
